fix tweet text overflow

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -462,3 +462,7 @@
 .user-bio{
     margin: 10px 0;
 }
+
+.tweet-text{
+    overflow-wrap: anywhere;
+}
